k8s/observability/neural-hive-alertmanager.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: neural-hive-alertmanager
  namespace: observability
  labels:
    alertmanager: neural-hive
    app.kubernetes.io/component: alertmanager
spec:
  type: ClusterIP
  ports:
  - port: 9093
    targetPort: 9093
    name: web
  selector:
    alertmanager: neural-hive
